Use zero padding to prevent layout shift
- Although previous CSS styles did solve layout shift issue, it disables usage of `react-scroll` library
- Force the body to have 0 padding can prevent `react-remove-scroll` from adding redundant right padding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  padding: 0 !important;
+}
+
 #__next {
   @apply flex min-h-screen flex-col text-gray-900;
 }
